--- a/lib/three-view-cube.css
+++ b/lib/three-view-cube.css
@@ -15,7 +15,9 @@
     justify-content: center;
     align-items: center;
 
-    font-size: 13px;
+    font-size: 12px;
+    font-weight: normal;
+    font-family: "Arial Black", sans-serif;
     color: #545454;
     background-color: #c3c3c3;
 
@@ -26,9 +28,88 @@
 
     cursor: pointer;
     pointer-events: all;
-    transition: background-color ease .15s;
+    transition: background-color ease-out .3s;
 }
 
 .side:hover {
     background-color: orange;
+}
+
+.side-button-container {
+    opacity: 0;
+    transition: opacity 0.15s ease-out;
+}
+
+.cube-side-button {
+    display: block;
+    position: absolute;
+    width: 0;
+    height: 0;
+    margin: 0;
+    padding: 0;
+    background-color: transparent;
+    cursor: pointer;
+    transition: border 0.3s ease-out, transform 0.3s ease-out;
+
+    --arrow-idle-color: #919191;
+    --arrow-hover-color: orange;
+}
+
+.cube-side-button:nth-child(1) {
+    border-left: 10px solid transparent;
+    border-right: 10px solid transparent;
+    border-top: 10px solid var(--arrow-idle-color);
+    border-bottom: 10px solid transparent;
+
+    left: 50%;
+    transform: translateX(-50%);
+}
+.cube-side-button:nth-child(1):hover {
+    border-top: 10px solid var(--arrow-hover-color);
+    transform: translate(-50%, -3px);
+}
+
+.cube-side-button:nth-child(2) {
+    border-left: 10px solid transparent;
+    border-right: 10px solid var(--arrow-idle-color);
+    border-top: 10px solid transparent;
+    border-bottom: 10px solid transparent;
+
+    right: 0;
+    top: 50%;
+    transform: translateY(-50%);
+}
+.cube-side-button:nth-child(2):hover {
+    border-right: 10px solid var(--arrow-hover-color);
+    transform: translate(3px, -50%);
+}
+
+.cube-side-button:nth-child(3) {
+    border-left: 10px solid transparent;
+    border-right: 10px solid transparent;
+    border-top: 10px solid transparent;
+    border-bottom: 10px solid var(--arrow-idle-color);
+
+    left: 50%;
+    bottom: 0;
+    transform: translateX(-50%);
+}
+.cube-side-button:nth-child(3):hover {
+    border-bottom: 10px solid var(--arrow-hover-color);
+    transform: translate(-50%, 3px);
+}
+
+.cube-side-button:nth-child(4) {
+    border-left: 10px solid var(--arrow-idle-color);
+    border-right: 10px solid transparent;
+    border-top: 10px solid transparent;
+    border-bottom: 10px solid transparent;
+
+    left: 0;
+    top: 50%;
+    transform: translateY(-50%);
+}
+.cube-side-button:nth-child(4):hover {
+    border-left: 10px solid var(--arrow-hover-color);
+    transform: translate(-3px, -50%);
 }
