--- a/src/style.css
+++ b/src/style.css
@@ -10,6 +10,6 @@ html, body {
 .view-cube {
     display: block;
     position: absolute;
-    left: 0;
-    top: 0;
+    left: 20px;
+    top: 20px;
 }
